Fix badges on small screens in firefox

--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -91,6 +91,7 @@
         justify-content: space-between;
 
         height: @fixed-column-height;
+        min-height: @fixed-column-height;
 
         @media @at-most-phone {
             margin-bottom: 32px;
